<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculatorPlus</string>
    <string name="action_settings">Settings</string>
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.00</string>
    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">0.18</string>
    <string name="tip_amount_text_view">Total Tip</string>
    <string name="tip_amount_edit_text">0.00</string>
    <string name="final_bill_text_view">Total Bill</string>
    <string name="final_bill_edit_text">0.00</string>
    <string name="change_tip_text_view">Tip</string>
    <string name="round_tip">Round Tip Up</string>
    <string name="round_bill">Round Bill Up</string>

    <string name="flashlight">Flashlight</string>

    <!-- AdMob -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
