<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorPlus">

    <TextView
        android:id="@+id/billTextView"
        android:text="@string/bill_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/billTextView"
        android:layout_marginStart="2dp"
        android:layout_alignBottom="@+id/billTextView"
        android:inputType="numberDecimal"
        android:ems="5"
        android:hint="@string/bill_edit_text" />

    <TextView
        android:id="@+id/tipTextView"
        android:text="@string/tip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_alignTop="@+id/billTextView"
        android:layout_toEndOf="@+id/billEditText"
        android:layout_marginStart="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipEditText"
        android:layout_alignTop="@+id/billEditText"
        android:layout_toEndOf="@+id/tipTextView"
        android:layout_marginStart="2dp"
        android:text="@string/tip_edit_text"
        android:inputType="numberDecimal"
        android:ems="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_bill_text_view"
        android:id="@+id/finalBillTextView"
        android:layout_marginTop="95dp"
        android:textIsSelectable="true"
        android:textSize="25sp"
        android:layout_below="@+id/billEditText"
        android:layout_alignStart="@+id/billTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalBillEditText"
        android:layout_toEndOf="@+id/finalBillTextView"
        android:text="@string/final_bill_edit_text"
        android:layout_alignBottom="@+id/finalBillTextView"
        android:inputType="numberDecimal"
        android:layout_marginStart="10dp"
        android:ems="5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount_text_view"
        android:id="@+id/tipAmountTextView"
        android:layout_above="@+id/finalBillEditText"
        android:layout_alignStart="@+id/finalBillTextView"
        android:textSize="25sp"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipAmountEditText"
        android:layout_alignBottom="@+id/tipAmountTextView"
        android:layout_alignStart="@+id/finalBillEditText"
        android:text="@string/tip_amount_edit_text"
        android:inputType="numberDecimal"
        android:ems="5" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeTipSeekBar"
        android:layout_below="@+id/tipEditText"
        android:layout_alignStart="@+id/tipTextView"
        android:layout_alignParentEnd="true"
        android:progress="54" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_tip"
        android:id="@+id/roundTipCheckBox"
        android:layout_alignBottom="@+id/tipAmountEditText"
        android:layout_toEndOf="@+id/tipAmountEditText"
        android:textSize="16sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_bill"
        android:id="@+id/roundBillCheckBox"
        android:layout_alignBottom="@+id/finalBillEditText"
        android:layout_toEndOf="@+id/finalBillEditText"
        android:textSize="16sp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flashlight"
        android:id="@+id/flashlightSwitch"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />



   <!-- <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        />-->


</RelativeLayout>
